--- a/src/apps/path-finder/components/controller/controller.module.scss
+++ b/src/apps/path-finder/components/controller/controller.module.scss
@@ -1,5 +1,16 @@
-.operations {
-  .active {
-    color: red;
+.controller {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 20px;
+
+  .clickType {
+    padding: 5px 10px;
+    border: 1px solid blue;
+    border-radius: 4px;
+
+    &.active {
+      box-shadow: 0 4px 8px rgb(0 0 0 / 50%);
+    }
   }
 }
