--- a/src/apps/sorting-visualizer/components/cell/cell.module.scss
+++ b/src/apps/sorting-visualizer/components/cell/cell.module.scss
@@ -1,4 +1,4 @@
-@use '/src/styles/theme';
+@use '/src/host/styles/theme';
 @use '/src/apps/sorting-visualizer/styles/cell-colors';
 
 .arrayContainer {
